--- a/guides.html
+++ b/guides.html
@@ -874,132 +874,138 @@
               <div class="guide-all-letter">
                 а
               </div>
-              <div class="guide-all-col">
-                <a href="#" class="guide-all-item">
-                  <span>АЛМАТЫ</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>амстердам</span>
-                </a>
-              </div>
-              <div class="guide-all-col">
-                <a href="#" class="guide-all-item">
-                  <span>АНТАЛЬЯ</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>АНТВЕРПЕН</span>
-                </a>
-              </div>
-              <div class="guide-all-col">
-                <a href="#" class="guide-all-item">
-                  <span>Антигуа</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>АФИНЫ</span>
-                </a>
+              <div class="guide-all-columns">
+                <div class="guide-all-col">
+                  <a href="#" class="guide-all-item">
+                    <span>АЛМАТЫ</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>амстердам</span>
+                  </a>
+                </div>
+                <div class="guide-all-col">
+                  <a href="#" class="guide-all-item">
+                    <span>АНТАЛЬЯ</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>АНТВЕРПЕН</span>
+                  </a>
+                </div>
+                <div class="guide-all-col">
+                  <a href="#" class="guide-all-item">
+                    <span>Антигуа</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>АФИНЫ</span>
+                  </a>
+                </div>
               </div>
             </div>
             <div class="guide-all-list-item">
               <div class="guide-all-letter">
                 б
               </div>
-              <div class="guide-all-col">
-                <a href="#" class="guide-all-item">
-                  <span>БАКУ</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>БАЛТИмор</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>бангкок</span>
-                </a>
-                <a href="#" class="guide-all-item new">
-                  <span>барселона</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>батуми</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>белград</span>
-                </a>
-              </div>
-              <div class="guide-all-col">
-                <a href="#" class="guide-all-item">
-                  <span>белосток</span>
-                </a>
-                <a href="#" class="guide-all-item new">
-                  <span>берлин</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>бирмингем</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>бобруйск</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>богота</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>болонья</span>
-                </a>
-              </div>
-              <div class="guide-all-col">
-                <a href="#" class="guide-all-item">
-                  <span>борисов</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>бостон</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>братислава</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>бремен</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>брест</span>
-                </a>
+              <div class="guide-all-columns">
+                <div class="guide-all-col">
+                  <a href="#" class="guide-all-item">
+                    <span>БАКУ</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>БАЛТИмор</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>бангкок</span>
+                  </a>
+                  <a href="#" class="guide-all-item new">
+                    <span>барселона</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>батуми</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>белград</span>
+                  </a>
+                </div>
+                <div class="guide-all-col">
+                  <a href="#" class="guide-all-item">
+                    <span>белосток</span>
+                  </a>
+                  <a href="#" class="guide-all-item new">
+                    <span>берлин</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>бирмингем</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>бобруйск</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>богота</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>болонья</span>
+                  </a>
+                </div>
+                <div class="guide-all-col">
+                  <a href="#" class="guide-all-item">
+                    <span>борисов</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>бостон</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>братислава</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>бремен</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>брест</span>
+                  </a>
+                </div>
               </div>
             </div>
             <div class="guide-all-list-item">
               <div class="guide-all-letter">
                 в
               </div>
-              <div class="guide-all-col">
-                <a href="#" class="guide-all-item">
-                  <span>Варшава</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>вашингтон</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>вена</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>венеция</span>
-                </a>
-              </div>
-              <div class="guide-all-col">
-                <a href="#" class="guide-all-item">
-                  <span>верона</span>
-                </a>
-                <a href="#" class="guide-all-item new">
-                  <span>вильнюс</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>винница</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>витебск</span>
-                </a>
-              </div>
-              <div class="guide-all-col">
-                <a href="#" class="guide-all-item">
-                  <span>вроцлав</span>
-                </a>
-                <a href="#" class="guide-all-item">
-                  <span>вьентьян</span>
-                </a>
+              <div class="guide-all-columns">
+                <div class="guide-all-col">
+                  <a href="#" class="guide-all-item">
+                    <span>Варшава</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>вашингтон</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>вена</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>венеция</span>
+                  </a>
+                </div>
+                <div class="guide-all-col">
+                  <a href="#" class="guide-all-item">
+                    <span>верона</span>
+                  </a>
+                  <a href="#" class="guide-all-item new">
+                    <span>вильнюс</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>винница</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>витебск</span>
+                  </a>
+                </div>
+                <div class="guide-all-col">
+                  <a href="#" class="guide-all-item">
+                    <span>вроцлав</span>
+                  </a>
+                  <a href="#" class="guide-all-item">
+                    <span>вьентьян</span>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
