--- a/guides.html
+++ b/guides.html
@@ -515,7 +515,7 @@
             </div>
           </form>
         </div>
-        <div class="guide-look-all">
+        <div class="guide-look-all scroll-link" data-scroll-to="guide-all">
           Посмотреть весь список гайдов по алфавиту
           <svg
             width="11"
@@ -865,7 +865,7 @@
             </div>
           </div>
         </div>
-        <div class="guide-all">
+        <div class="guide-all" id="guide-all">
           <div class="ui-section-title">
             Все гайды:
           </div>
@@ -1354,7 +1354,7 @@
     <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/cookies.min.js?v=1758738614"></script>
     <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/jquery.validate.min.js?v=1758738614"></script>
     <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/jquery-ui.min.js?v=1758738614"></script>
-    <script type="text/javascript" src="../js/custom.js"></script>
+    <script type="text/javascript" src="./js/custom.js"></script>
     <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/all_custom.js?v=1758738614"></script>
     <script type="text/javascript" src="https://34t.farbatest.com/themes/travel/js/cookie.js?v=1758738614"></script>
   </body>
