--- a/Subscription - all forms/05 Subscription - as-a-gift-error.html
+++ b/Subscription - all forms/05 Subscription - as-a-gift-error.html
@@ -598,12 +598,8 @@
                         class="form_long-input"
                         required
                       >
-                      <label
-                        id="email1-error"
-                        class="error"
-                        for="email1"
-                        style="display: none;"
-                      >Некорректный адрес Email</label>
+                      <label id="email1-error" class="error" for="email1">Некорректный адрес Email</label>
+                      <label id="email1-error" class="error" for="email1">Некорректный адрес Email</label>
                     </div>
                   </div>
                   <div class="from-item from-item__mb_90">
